--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -629,7 +629,9 @@
       "DATA_CHIP": "聖遺物タグデータ",
       "DATA_GENSHIN_AVATAR": "キャラクターデータ",
       "DATA_GENSHIN_WEAPON": "武器データ",
-      "DATA_GENSHIN_MONSTER": "敵データ",
+      "DATA_GENSHIN_MONSTER_1": "敵データ1",
+      "DATA_GENSHIN_MONSTER_2": "敵データ2",
+      "DATA_GENSHIN_MONSTER_3": "敵データ3",
       "DATA_GENSHIN_RELIQUARY_SET": "聖遺物セットデータ",
       "DATA_GENSHIN_RELIQUARY_MAIN": "聖遺物メイン属性データ",
       "DATA_GENSHIN_RELIQUARY_SUB": "聖遺物サブ属性データ"
