--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -102,6 +102,9 @@
     "HP_BASE": "基礎生命值",
     "ATTACK_BASE": "基礎攻擊力",
     "DEFENSE_BASE": "基礎防禦力",
+    "HP_BASE_EXTRA": "基礎生命增加值",
+    "ATTACK_BASE_EXTRA": "基礎攻擊力增加值",
+    "DEFENSE_BASE_EXTRA": "基礎防禦力增加值",
     "HP_VAL_UP": "生命值增加值",
     "ATTACK_VAL_UP": "攻擊力增加值",
     "DEFENSE_VAL_UP": "防禦力增加值",
@@ -462,7 +465,10 @@
     "MUALANI_SHARKY_BITE": "鯊鯊撕咬",
     "CHASCA_SHADOWHUNT_SHELL": "追影彈",
     "CHASCA_SHINING_SHADOWHUNT_SHELL": "煥光追影彈",
-    "ORORON_HYPERSENSE": "顯象超感"
+    "ORORON_HYPERSENSE": "顯象超感",
+    "MAVUIKA_FLAMESTRIDER": "馳輪車",
+    "CITLALI_FROSTFALL_STORM": "霜陨风暴",
+    "CITLALI_ICE_STORM": "冰风暴"
   },
   "AUTO": {
     "CALC": "計算",
@@ -553,6 +559,15 @@
     },
     "PREY_MARKED": {
       "TITLE": "獵物標記"
+    },
+    "NIGHTSOUL": {
+      "TITLE": "夜魂加持"
+    },
+    "FIGHTING_SPIRIT": {
+      "TITLE": "戰意"
+    },
+    "SECRET_LAW": {
+      "TITLE": "秘律之數"
     }
   },
   "MENU": {
