--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -102,6 +102,9 @@
     "HP_BASE": "HPベース",
     "ATTACK_BASE": "攻撃力ベース",
     "DEFENSE_BASE": "防御力ベース",
+    "HP_BASE_EXTRA": "HPベースアップ",
+    "ATTACK_BASE_EXTRA": "攻撃力ベースアップ",
+    "DEFENSE_BASE_EXTRA": "防御力ベースアップ",
     "HP_VAL_UP": "HP数値アップ",
     "ATTACK_VAL_UP": "攻撃力数値アップ",
     "DEFENSE_VAL_UP": "防御力数値アップ",
@@ -462,7 +465,10 @@
     "MUALANI_SHARKY_BITE": "サメサメバイト",
     "CHASCA_SHADOWHUNT_SHELL": "シャドウチェイサー弾",
     "CHASCA_SHINING_SHADOWHUNT_SHELL": "シャドウチェイサー弾・光輝",
-    "ORORON_HYPERSENSE": "顕象超感覚"
+    "ORORON_HYPERSENSE": "顕象超感覚",
+    "MAVUIKA_FLAMESTRIDER": "双駆輪",
+    "CITLALI_FROSTFALL_STORM": "霜落の嵐",
+    "CITLALI_ICE_STORM": "氷晶の嵐"
   },
   "AUTO": {
     "CALC": "計算",
@@ -553,6 +559,15 @@
     },
     "PREY_MARKED": {
       "TITLE": "獲物マーク"
+    },
+    "NIGHTSOUL": {
+      "TITLE": "夜魂の加護"
+    },
+    "FIGHTING_SPIRIT": {
+      "TITLE": "戦意"
+    },
+    "SECRET_LAW": {
+      "TITLE": "秘律カウント"
     }
   },
   "MENU": {
