--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -217,15 +217,16 @@
     "DMG_CRIT_DMG_UP_WEAPON": "Weapon DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_OTHER": "Other DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_SET": "Artifact DMG CRIT DMG Increase",
-    "DMG_ELEMENT_UP": "Element Improvement (All)",
-    "DMG_ELEMENT_VAPORIZE_UP": "Element Improvement (Vaporize)",
-    "DMG_ELEMENT_MELT_UP": "Element Improvement (Melt)",
-    "DMG_ELEMENT_OVERLOADED_UP": "Element Improvement (Overloaded)",
-    "DMG_ELEMENT_BURNING_UP": "Element Improvement (Burning)",
-    "DMG_ELEMENT_ELECTROCHARGED_UP": "Element Improvement (Electrocharged)",
-    "DMG_ELEMENT_SUPERCONDUCT_UP": "Element Improvement (Superconduct)",
-    "DMG_ELEMENT_SWIRL_UP": "Element Improvement (Swirl)",
-    "DMG_ELEMENT_DESTRUCTION_UP": "Element Improvement (Destruction)",
+    "DMG_ELEMENT_UP": "Element Amplification (All)",
+    "DMG_ELEMENT_VAPORIZE_UP": "Element Amplification (Vaporize)",
+    "DMG_ELEMENT_MELT_UP": "Element Amplification (Melt)",
+    "DMG_ELEMENT_OVERLOADED_UP": "Element Amplification (Overloaded)",
+    "DMG_ELEMENT_BURNING_UP": "Element Amplification (Burning)",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "Element Amplification (Electrocharged)",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "Element Amplification (Superconduct)",
+    "DMG_ELEMENT_SWIRL_VAL_UP": "Element Amplification (Swirl Increase)",
+    "DMG_ELEMENT_SWIRL_UP": "Element Amplification (Swirl)",
+    "DMG_ELEMENT_DESTRUCTION_UP": "Element Amplification (Destruction)",
     "DMG_ELEMENT_SHIELD_UP": "Element Amplification (Elemental Shield)",
     "DMG_ELEMENT_RUPTURE_UP": "Element Amplification (Rupture)",
     "DMG_ELEMENT_BURGEON_UP": "Element Amplification (Burgeon)",
