--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -217,21 +217,22 @@
     "DMG_CRIT_DMG_UP_WEAPON": "武器ダメージ会心ダメージアップ値",
     "DMG_CRIT_DMG_UP_OTHER": "その他ダメージ会心ダメージアップ値",
     "DMG_CRIT_DMG_UP_SET": "聖遺物ダメージ会心ダメージアップ値",
-    "DMG_ELEMENT_UP": "元素(増幅)(全)",
-    "DMG_ELEMENT_VAPORIZE_UP": "元素(増幅)(蒸発)",
-    "DMG_ELEMENT_MELT_UP": "元素(増幅)(溶解)",
-    "DMG_ELEMENT_OVERLOADED_UP": "元素(増幅)(過負荷)",
-    "DMG_ELEMENT_BURNING_UP": "元素(増幅)(燃焼)",
-    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素(増幅)(感電)",
-    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素(増幅)(超電導)",
-    "DMG_ELEMENT_SWIRL_UP": "元素(増幅)(拡散)",
-    "DMG_ELEMENT_DESTRUCTION_UP": "元素(増幅)(氷砕き)",
-    "DMG_ELEMENT_SHIELD_UP": "元素(増幅)(結晶)",
-    "DMG_ELEMENT_RUPTURE_UP": "元素(増幅)(開花)",
-    "DMG_ELEMENT_BURGEON_UP": "元素(増幅)(烈開花)",
-    "DMG_ELEMENT_HYPERBLOOM_UP": "元素(増幅)(超開花)",
-    "DMG_ELEMENT_AGGRAVATE_UP": "元素(増幅)(超激化)",
-    "DMG_ELEMENT_SPREAD_UP": "元素(増幅)(拡激化)",
+    "DMG_ELEMENT_UP": "元素増幅(全)",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅(蒸発)",
+    "DMG_ELEMENT_MELT_UP": "元素増幅(溶解)",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅(過負荷)",
+    "DMG_ELEMENT_BURNING_UP": "元素増幅(燃焼)",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅(感電)",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅(超電導)",
+    "DMG_ELEMENT_SWIRL_VAL_UP": "元素増幅(拡散アップ値)",
+    "DMG_ELEMENT_SWIRL_UP": "元素増幅(拡散)",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅(氷砕き)",
+    "DMG_ELEMENT_SHIELD_UP": "元素増幅(結晶)",
+    "DMG_ELEMENT_RUPTURE_UP": "元素増幅(開花)",
+    "DMG_ELEMENT_BURGEON_UP": "元素増幅(烈開花)",
+    "DMG_ELEMENT_HYPERBLOOM_UP": "元素増幅(超開花)",
+    "DMG_ELEMENT_AGGRAVATE_UP": "元素増幅(超激化)",
+    "DMG_ELEMENT_SPREAD_UP": "元素増幅(拡激化)",
     "DMG_ENEMY_DEFENSE_BASE": "敵防御(基礎)",
     "DMG_ENEMY_DEFENSE": "敵防御",
     "DMG_ENEMY_DEFENSE_DOWN": "敵防御マイナス",
