--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -469,7 +469,11 @@
     "ORORON_HYPERSENSE": "显象超感",
     "MAVUIKA_FLAMESTRIDER": "驰轮车",
     "CITLALI_FROSTFALL_STORM": "霜陨风暴",
-    "CITLALI_ICE_STORM": "冰风暴"
+    "CITLALI_ICE_STORM": "冰风暴",
+    "VARESA_PLUNGE": "坠地冲击",
+    "VARESA_FIERY_PASSION_PLUNGE": "炽热激情状态坠地冲击",
+    "VARESA_FIERY_PASSION_ELEMENTAL_BURST": "炽热激情状态飞踢",
+    "VARESA_VOLCANO_KABLAM": "大火山崩落"
   },
   "AUTO": {
     "CALC": "计算",
