--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -162,6 +162,7 @@
     "DMG_RATE_MULTI_WEAPON": "武器伤害倍率乘算加成",
     "DMG_RATE_MULTI_OTHER": "其他伤害倍率乘算加成",
     "DMG_RATE_MULTI_SET": "圣遗物伤害倍率乘算加成",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "月感電伤害倍率乘算加成",
     "HEALING_RATE_MULTI_SKILL": "元素技能治疗倍率乘算加成",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆发治疗倍率乘算加成",
     "DMG_VAL_UP_CRYO": "冰元素伤害增加值",
@@ -223,6 +224,7 @@
     "DMG_ELEMENT_OVERLOADED_UP": "元素増幅(超载)",
     "DMG_ELEMENT_BURNING_UP": "元素増幅(燃烧)",
     "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅(感电)",
+    "DMG_ELEMENT_MOON_ELECTROCHARGED_UP": "元素増幅(月感电)",
     "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅(超导)",
     "DMG_ELEMENT_SWIRL_VAL_UP": "元素増幅(扩散增加值)",
     "DMG_ELEMENT_SWIRL_UP": "元素増幅(扩散)",
@@ -259,19 +261,19 @@
   },
   "GENSHIN": {
     "DMG": {
-      "ORIGIN": "不暴击伤害",
+      "ORIGIN": "非暴击伤害",
       "CRIT": "暴击伤害",
       "EXPECT": "期望伤害",
-      "ORIGIN_VAPORIZE": "不暴击伤害(蒸发)",
+      "ORIGIN_VAPORIZE": "非暴击伤害(蒸发)",
       "CRIT_VAPORIZE": "暴击伤害(蒸发)",
       "EXPECT_VAPORIZE": "期望伤害(蒸发)",
-      "ORIGIN_MELT": "不暴击伤害(融化)",
+      "ORIGIN_MELT": "非暴击伤害(融化)",
       "CRIT_MELT": "暴击伤害(融化)",
       "EXPECT_MELT": "期望伤害(融化)",
-      "ORIGIN_AGGRAVATE": "不暴击伤害(超激化)",
+      "ORIGIN_AGGRAVATE": "非暴击伤害(超激化)",
       "CRIT_AGGRAVATE": "暴击伤害(超激化)",
       "EXPECT_AGGRAVATE": "期望伤害(超激化)",
-      "ORIGIN_SPREAD": "不暴击伤害(蔓激化)",
+      "ORIGIN_SPREAD": "非暴击伤害(蔓激化)",
       "CRIT_SPREAD": "暴击伤害(蔓激化)",
       "EXPECT_SPREAD": "期望伤害(蔓激化)",
       "CRYO": "冰元素伤害",
@@ -285,6 +287,12 @@
       "OVERLOADED": "超载伤害",
       "BURNING": "燃烧伤害",
       "ELECTROCHARGED": "感电伤害",
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "非暴击月感电伤害(直接)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "暴击月感电伤害(直接)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "期望月感电伤害(直接)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "非暴击月感电伤害(反应)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "暴击月感电伤害(反应)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "期望月感电伤害(反应)",
       "SUPERCONDUCT": "超导伤害",
       "RUPTURE": "绽放伤害",
       "BURGEON": "烈绽放伤害",
@@ -376,7 +384,18 @@
       "SHIELD_COMMON_UP": "护盾强效乘区",
       "SHIELD_SPECIAL_ELEMENT_ABS": "对应元素吸收乘区",
       "SHIELD_GEO_ELEMENT_ABS": "全元素吸收乘区",
-      "PRODUCT_BASE": "生成物生命值基础乘区"
+      "PRODUCT_BASE": "生成物生命值基础乘区",
+      "DMG_MOON_ELECTRO_CHARGED_DIRECTLY_BASE": "直伤月感电基础乘区",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_1": "[成员1]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_2": "[成员2]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_3": "[成员3]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_4": "[成员4]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_1": "[成员1]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_2": "[成员2]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[成员3]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[成员4]反应月感电",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "期望月感电",
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "月感电増幅乘区"
     }
   },
   "ENKA": {
