--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -162,6 +162,7 @@
     "DMG_RATE_MULTI_WEAPON": "Weapon DMG Multiplier Bonus",
     "DMG_RATE_MULTI_OTHER": "Other DMG Multiplier Bonus",
     "DMG_RATE_MULTI_SET": "Artifact DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "Moon Electro-Charged DMG Multiplier Bonus",
     "HEALING_RATE_MULTI_SKILL": "Skill Healing Multiplier Bonus",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Bonus",
     "DMG_VAL_UP_CRYO": "Cryo DMG Increase",
@@ -223,6 +224,7 @@
     "DMG_ELEMENT_OVERLOADED_UP": "Element Amplification (Overloaded)",
     "DMG_ELEMENT_BURNING_UP": "Element Amplification (Burning)",
     "DMG_ELEMENT_ELECTROCHARGED_UP": "Element Amplification (Electrocharged)",
+    "DMG_ELEMENT_MOON_ELECTROCHARGED_UP": "Element Amplification (Moon Electro-Charged)",
     "DMG_ELEMENT_SUPERCONDUCT_UP": "Element Amplification (Superconduct)",
     "DMG_ELEMENT_SWIRL_VAL_UP": "Element Amplification (Swirl Increase)",
     "DMG_ELEMENT_SWIRL_UP": "Element Amplification (Swirl)",
@@ -259,20 +261,20 @@
   },
   "GENSHIN": {
     "DMG": {
-      "ORIGIN": "No Critical Damage",
-      "CRIT": "Critical Damage",
+      "ORIGIN": "Non-CRIT Damage",
+      "CRIT": "CRIT Damage",
       "EXPECT": "Expected Damage",
-      "ORIGIN_VAPORIZE": "No Critical Damage (Vaporize)",
-      "CRIT_VAPORIZE": "Critical Damage (Vaporize)",
+      "ORIGIN_VAPORIZE": "Non-CRIT Damage (Vaporize)",
+      "CRIT_VAPORIZE": "CRIT Damage (Vaporize)",
       "EXPECT_VAPORIZE": "Expected Damage (Vaporize)",
-      "ORIGIN_MELT": "No Critical Damage (Melt)",
-      "CRIT_MELT": "Critical Damage (Melt)",
+      "ORIGIN_MELT": "Non-CRIT Damage (Melt)",
+      "CRIT_MELT": "CRIT Damage (Melt)",
       "EXPECT_MELT": "Expected Damage (Melt)",
-      "ORIGIN_AGGRAVATE": "No Critical Damage (Aggravate)",
-      "CRIT_AGGRAVATE": "Critical Damage (Aggravate)",
+      "ORIGIN_AGGRAVATE": "Non-CRIT Damage (Aggravate)",
+      "CRIT_AGGRAVATE": "CRIT Damage (Aggravate)",
       "EXPECT_AGGRAVATE": "Expected Damage (Aggravate)",
-      "ORIGIN_SPREAD": "No Critical Damage (Spread)",
-      "CRIT_SPREAD": "Critical Damage (Spread)",
+      "ORIGIN_SPREAD": "Non-CRIT Damage (Spread)",
+      "CRIT_SPREAD": "CRIT Damage (Spread)",
       "EXPECT_SPREAD": "Expected Damage (Spread)",
       "CRYO": "Cryo Damage",
       "ANEMO": "Anemo Damage",
@@ -285,6 +287,12 @@
       "OVERLOADED": "Overloaded Damage",
       "BURNING": "Burning Damage",
       "ELECTROCHARGED": "Electrocharged Damage",
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "Non-CRIT Moon Electro-Charged DMG (Direct)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "CRIT Moon Electro-Charged DMG (Direct)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "Expected Moon Electro-Charged DMG (Direct)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "Non-CRIT Moon Electro-Charged DMG (Reactional)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "CRIT Moon Electro-Charged DMG (Reactional)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "Expected Moon Electro-Charged DMG (Reactional)",
       "SUPERCONDUCT": "Superconduct Damage",
       "RUPTURE": "Rupture Damage",
       "BURGEON": "Burgeon Damage",
@@ -327,8 +335,8 @@
     },
     "PROCESS": {
       "DMG_DMG_SECTION": "Basic Section",
-      "DMG_CRITE_RATE": "Critical Rate Section",
-      "DMG_CRITE_DMG": "Critical DMG Section",
+      "DMG_CRITE_RATE": "CRIT Rate Section",
+      "DMG_CRITE_DMG": "CRIT DMG Section",
       "DMG_CRITE_EXPECT": "Expected Section",
       "DMG_DMG_UP": "DMG Bonus Section",
       "DMG_DMG_ANTI": "DMG Resist. Section",
@@ -376,7 +384,18 @@
       "SHIELD_COMMON_UP": "Shield Bonus Section",
       "SHIELD_SPECIAL_ELEMENT_ABS": "Corresponding Element Absorption Section",
       "SHIELD_GEO_ELEMENT_ABS": "All Element Absorption Section",
-      "PRODUCT_BASE": "Production HP Base Section"
+      "PRODUCT_BASE": "Production HP Base Section",
+      "DMG_MOON_ELECTRO_CHARGED_DIRECTLY_BASE": "Direct Moon Electro-Charged DMG Base Multiplier",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_1": "[Member 1] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_2": "[Member 2] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_3": "[Member 3] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_4": "[Member 4] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_1": "[Member 1] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_2": "[Member 2] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[Member 3] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[Member 4] Reactional Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "Expected Moon Electro-Charged",
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "Moon Electro-Charged Amplification Multiplier"
     }
   },
   "ENKA": {
