--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -162,6 +162,7 @@
     "DMG_RATE_MULTI_WEAPON": "武器ダメージ倍率乗算ボーナス",
     "DMG_RATE_MULTI_OTHER": "その他ダメージ倍率乗算ボーナス",
     "DMG_RATE_MULTI_SET": "聖遺物ダメージ倍率乗算ボーナス",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "月感電ダメージ倍率乗算ボーナス",
     "HEALING_RATE_MULTI_SKILL": "元素スキル治療倍率乗算ボーナス",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆発治療倍率乗算ボーナス",
     "DMG_VAL_UP_CRYO": "氷元素ダメージアップ値",
@@ -223,6 +224,7 @@
     "DMG_ELEMENT_OVERLOADED_UP": "元素増幅(過負荷)",
     "DMG_ELEMENT_BURNING_UP": "元素増幅(燃焼)",
     "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅(感電)",
+    "DMG_ELEMENT_MOON_ELECTROCHARGED_UP": "元素増幅(月感電)",
     "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅(超電導)",
     "DMG_ELEMENT_SWIRL_VAL_UP": "元素増幅(拡散アップ値)",
     "DMG_ELEMENT_SWIRL_UP": "元素増幅(拡散)",
@@ -285,6 +287,12 @@
       "OVERLOADED": "過負荷ダメージ",
       "BURNING": "燃焼ダメージ",
       "ELECTROCHARGED": "感電ダメージ",
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "通常月感電ダメージ(直接)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "会心月感電ダメージ(直接)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "期待値月感電ダメージ(直接)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "通常月感電ダメージ(反応)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "会心月感電ダメージ(反応)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "期待値月感電ダメージ(反応)",
       "SUPERCONDUCT": "超電導ダメージ",
       "RUPTURE": "開花ダメージ",
       "BURGEON": "烈開花ダメージ",
@@ -376,7 +384,18 @@
       "SHIELD_COMMON_UP": "シールド強化エリア",
       "SHIELD_SPECIAL_ELEMENT_ABS": "対応元素吸収エリア",
       "SHIELD_GEO_ELEMENT_ABS": "全元素吸収エリア",
-      "PRODUCT_BASE": "生成物の生命値基本エリア"
+      "PRODUCT_BASE": "生成物の生命値基本エリア",
+      "DMG_MOON_ELECTRO_CHARGED_DIRECTLY_BASE": "直接月感電基礎乗算エリア",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_1": "[メンバー1]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_2": "[メンバー2]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_3": "[メンバー3]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_4": "[メンバー4]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_1": "[メンバー1]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_2": "[メンバー2]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[メンバー3]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[メンバー4]反応月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "期待値月感電",
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "月感電増幅乗算エリア"
     }
   },
   "ENKA": {
