--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -162,6 +162,7 @@
     "DMG_RATE_MULTI_WEAPON": "武器傷害倍率乘算加成",
     "DMG_RATE_MULTI_OTHER": "其他傷害倍率乘算加成",
     "DMG_RATE_MULTI_SET": "聖遺物傷害倍率乘算加成",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "月感電傷害倍率乘算加成",
     "HEALING_RATE_MULTI_SKILL": "元素技能治療倍率乘算加成",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆發治療倍率乘算加成",
     "DMG_VAL_UP_CRYO": "冰元素傷害增加值",
@@ -217,22 +218,23 @@
     "DMG_CRIT_DMG_UP_WEAPON": "武器傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_OTHER": "其他傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_SET": "聖遺物傷害暴擊傷害增加值",
-    "DMG_ELEMENT_UP": "元素増幅(全)",
-    "DMG_ELEMENT_VAPORIZE_UP": "元素増幅(蒸發)",
-    "DMG_ELEMENT_MELT_UP": "元素増幅(融化)",
-    "DMG_ELEMENT_OVERLOADED_UP": "元素増幅(超載)",
-    "DMG_ELEMENT_BURNING_UP": "元素増幅(燃燒)",
-    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素増幅(感電)",
-    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素増幅(超導)",
-    "DMG_ELEMENT_SWIRL_VAL_UP": "元素増幅(擴散增加值)",
-    "DMG_ELEMENT_SWIRL_UP": "元素増幅(擴散)",
-    "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅(破冰)",
-    "DMG_ELEMENT_SHIELD_UP": "元素増幅(結晶)",
-    "DMG_ELEMENT_RUPTURE_UP": "元素増幅(綻放)",
-    "DMG_ELEMENT_BURGEON_UP": "元素増幅(烈綻放)",
-    "DMG_ELEMENT_HYPERBLOOM_UP": "元素増幅(超綻放)",
-    "DMG_ELEMENT_AGGRAVATE_UP": "元素増幅(超激化)",
-    "DMG_ELEMENT_SPREAD_UP": "元素増幅(蔓激化)",
+    "DMG_ELEMENT_UP": "元素增幅(全)",
+    "DMG_ELEMENT_VAPORIZE_UP": "元素增幅(蒸發)",
+    "DMG_ELEMENT_MELT_UP": "元素增幅(融化)",
+    "DMG_ELEMENT_OVERLOADED_UP": "元素增幅(超載)",
+    "DMG_ELEMENT_BURNING_UP": "元素增幅(燃燒)",
+    "DMG_ELEMENT_ELECTROCHARGED_UP": "元素增幅(感電)",
+    "DMG_ELEMENT_MOON_ELECTROCHARGED_UP": "元素增幅(月感電)",
+    "DMG_ELEMENT_SUPERCONDUCT_UP": "元素增幅(超導)",
+    "DMG_ELEMENT_SWIRL_VAL_UP": "元素增幅(擴散增加值)",
+    "DMG_ELEMENT_SWIRL_UP": "元素增幅(擴散)",
+    "DMG_ELEMENT_DESTRUCTION_UP": "元素增幅(破冰)",
+    "DMG_ELEMENT_SHIELD_UP": "元素增幅(結晶)",
+    "DMG_ELEMENT_RUPTURE_UP": "元素增幅(綻放)",
+    "DMG_ELEMENT_BURGEON_UP": "元素增幅(烈綻放)",
+    "DMG_ELEMENT_HYPERBLOOM_UP": "元素增幅(超綻放)",
+    "DMG_ELEMENT_AGGRAVATE_UP": "元素增幅(超激化)",
+    "DMG_ELEMENT_SPREAD_UP": "元素增幅(蔓激化)",
     "DMG_ENEMY_DEFENSE_BASE": "敵人基礎防禦",
     "DMG_ENEMY_DEFENSE": "敵人防禦",
     "DMG_ENEMY_DEFENSE_DOWN": "敵人防禦減少",
@@ -259,19 +261,19 @@
   },
   "GENSHIN": {
     "DMG": {
-      "ORIGIN": "不暴擊傷害",
+      "ORIGIN": "非暴擊傷害",
       "CRIT": "暴擊傷害",
       "EXPECT": "期望傷害",
-      "ORIGIN_VAPORIZE": "不暴擊傷害(蒸發)",
+      "ORIGIN_VAPORIZE": "非暴擊傷害(蒸發)",
       "CRIT_VAPORIZE": "暴擊傷害(蒸發)",
       "EXPECT_VAPORIZE": "期望傷害(蒸發)",
-      "ORIGIN_MELT": "不暴擊傷害(融化)",
+      "ORIGIN_MELT": "非暴擊傷害(融化)",
       "CRIT_MELT": "暴擊傷害(融化)",
       "EXPECT_MELT": "期望傷害(融化)",
-      "ORIGIN_AGGRAVATE": "不暴擊傷害(超激化)",
+      "ORIGIN_AGGRAVATE": "非暴擊傷害(超激化)",
       "CRIT_AGGRAVATE": "暴擊傷害(超激化)",
       "EXPECT_AGGRAVATE": "期望傷害(超激化)",
-      "ORIGIN_SPREAD": "不暴擊傷害(蔓激化)",
+      "ORIGIN_SPREAD": "非暴擊傷害(蔓激化)",
       "CRIT_SPREAD": "暴擊傷害(蔓激化)",
       "EXPECT_SPREAD": "期望傷害(蔓激化)",
       "CRYO": "冰元素傷害",
@@ -285,6 +287,12 @@
       "OVERLOADED": "超載傷害",
       "BURNING": "燃燒傷害",
       "ELECTROCHARGED": "感電傷害",
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "非暴擊月感電傷害(直接)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "暴擊月感電傷害(直接)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "期望月感電傷害(直接)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "非暴擊月感電傷害(反應)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "暴擊月感電傷害(反應)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "期望月感電傷害(反應)",
       "SUPERCONDUCT": "超導傷害",
       "RUPTURE": "綻放傷害",
       "BURGEON": "烈綻放傷害",
@@ -342,32 +350,32 @@
       "DMG_PYRO_ANTI": "火傷減抗乘區",
       "DMG_HYDRO_ANTI": "水傷減抗乘區",
       "DMG_DENDRO_ANTI": "草傷減抗乘區",
-      "DMG_VAPORIZE_RATE": "蒸發増幅乘區",
-      "DMG_MELT_RATE": "融化増幅乘區",
+      "DMG_VAPORIZE_RATE": "蒸發增幅乘區",
+      "DMG_MELT_RATE": "融化增幅乘區",
       "DMG_BURNING_BASE": "燃燒基礎乘區",
-      "DMG_BURNING_RATE": "燃燒増幅乘區",
+      "DMG_BURNING_RATE": "燃燒增幅乘區",
       "DMG_SUPERCONDUCT_BASE": "超導基礎乘區",
-      "DMG_SUPERCONDUCT_RATE": "超導増幅乘區",
+      "DMG_SUPERCONDUCT_RATE": "超導增幅乘區",
       "DMG_SWIRL_BASE": "擴散基礎乘區",
-      "DMG_SWIRL_RATE": "擴散増幅乘區",
+      "DMG_SWIRL_RATE": "擴散增幅乘區",
       "DMG_SWIRL_ELECTRO_AGGRAVATE_BASE": "擴散(超激化)基礎乘區",
       "DMG_SWIRL_ELECTRO_AGGRAVATE_RATE": "擴散(超激化)基礎乘區",
       "DMG_ELECTRO_CHARGED_BASE": "感電基礎乘區",
-      "DMG_ELECTRO_CHARGED_RATE": "感電増幅乘區",
+      "DMG_ELECTRO_CHARGED_RATE": "感電增幅乘區",
       "DMG_DESTRUCTION_BASE": "破冰基礎乘區",
-      "DMG_DESTRUCTION_RATE": "破冰増幅乘區",
+      "DMG_DESTRUCTION_RATE": "破冰增幅乘區",
       "DMG_OVERLOADED_BASE": "超載基礎乘區",
-      "DMG_OVERLOADED_RATE": "超載増幅乘區",
+      "DMG_OVERLOADED_RATE": "超載增幅乘區",
       "DMG_SHIELD_BASE": "結晶基礎乘區",
-      "DMG_SHIELD_RATE": "結晶増幅乘區",
+      "DMG_SHIELD_RATE": "結晶增幅乘區",
       "DMG_AGGRAVATE_BASE": "超激化基礎乘區",
       "DMG_SPREAD_BASE": "蔓激化基礎乘區",
       "DMG_HYPER_BLOOM_BASE": "超綻放基礎乘區",
-      "DMG_HYPER_BLOOM_RATE": "超綻放増幅乘區",
+      "DMG_HYPER_BLOOM_RATE": "超綻放增幅乘區",
       "DMG_BURGEON_BASE": "烈綻放基礎乘區",
-      "DMG_BURGEON_RATE": "烈綻放増幅乘區",
+      "DMG_BURGEON_RATE": "烈綻放增幅乘區",
       "DMG_RUPTURE_BASE": "綻放基礎乘區",
-      "DMG_RUPTURE_RATE": "綻放増幅乘區",
+      "DMG_RUPTURE_RATE": "綻放增幅乘區",
       "DMG_SHIELD_SPECIAL_RATE": "對應元素乘區",
       "HEALING_BASE": "治療基礎乘區",
       "HEALING_UP": "治療加成乘區",
@@ -376,7 +384,18 @@
       "SHIELD_COMMON_UP": "護盾強效乘區",
       "SHIELD_SPECIAL_ELEMENT_ABS": "對應元素吸收乘區",
       "SHIELD_GEO_ELEMENT_ABS": "全元素吸收乘區",
-      "PRODUCT_BASE": "生成物生命值基礎乘區"
+      "PRODUCT_BASE": "生成物生命值基礎乘區",
+      "DMG_MOON_ELECTRO_CHARGED_DIRECTLY_BASE": "直傷月感電基礎乘區",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_1": "[成員1]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_2": "[成員2]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_3": "[成員3]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_ORIGIN_4": "[成員4]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_1": "[成員1]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_2": "[成員2]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[成員3]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[成員4]反應月感電",
+      "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "期望月感電",
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "月感電增幅乘區"
     }
   },
   "ENKA": {
