--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -162,9 +162,10 @@
     "DMG_RATE_MULTI_WEAPON": "武器伤害倍率乘算加成",
     "DMG_RATE_MULTI_OTHER": "其他伤害倍率乘算加成",
     "DMG_RATE_MULTI_SET": "圣遗物伤害倍率乘算加成",
-    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "月感電伤害倍率乘算加成",
     "HEALING_RATE_MULTI_SKILL": "元素技能治疗倍率乘算加成",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆发治疗倍率乘算加成",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "月感电伤害倍率乘算加成",
+    "DMG_RATE_MULTI_MOON_RUPTURE": "月绽放伤害倍率乘算加成",
     "DMG_VAL_UP_CRYO": "冰元素伤害增加值",
     "DMG_VAL_UP_ANEMO": "风元素伤害增加值",
     "DMG_VAL_UP_PHYSICAL": "物理伤害增加值",
@@ -201,6 +202,7 @@
     "DMG_CRIT_RATE_UP_WEAPON": "武器伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_OTHER": "其他伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_SET": "圣遗物伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击率增加值",
     "DMG_CRIT_DMG_UP_CRYO": "冰元素伤害暴击伤害增加值",
     "DMG_CRIT_DMG_UP_ANEMO": "风元素伤害暴击伤害增加值",
     "DMG_CRIT_DMG_UP_PHYSICAL": "物理伤害暴击伤害增加值",
@@ -218,7 +220,9 @@
     "DMG_CRIT_DMG_UP_WEAPON": "武器伤害暴击伤害增加值",
     "DMG_CRIT_DMG_UP_OTHER": "其他伤害暴击伤害增加值",
     "DMG_CRIT_DMG_UP_SET": "圣遗物伤害暴击伤害增加值",
+    "DMG_CRIT_DMG_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击伤害增加值",
     "DMG_ELEMENT_UP": "元素増幅(全)",
+    "DMG_ELEMENT_MOON_ALL_UP": "元素増幅(月曜)",
     "DMG_ELEMENT_VAPORIZE_UP": "元素増幅(蒸发)",
     "DMG_ELEMENT_MELT_UP": "元素増幅(融化)",
     "DMG_ELEMENT_OVERLOADED_UP": "元素増幅(超载)",
@@ -231,10 +235,17 @@
     "DMG_ELEMENT_DESTRUCTION_UP": "元素増幅(破冰)",
     "DMG_ELEMENT_SHIELD_UP": "元素増幅(結晶)",
     "DMG_ELEMENT_RUPTURE_UP": "元素増幅(绽放)",
+    "DMG_ELEMENT_MOON_RUPTURE_UP": "元素増幅(月绽放)",
     "DMG_ELEMENT_BURGEON_UP": "元素増幅(烈绽放)",
     "DMG_ELEMENT_HYPERBLOOM_UP": "元素増幅(超绽放)",
     "DMG_ELEMENT_AGGRAVATE_UP": "元素増幅(超激化)",
     "DMG_ELEMENT_SPREAD_UP": "元素増幅(蔓激化)",
+    "DMG_ELEMENT_MOON_RUPTURE_EXTRA_VAL_UP": "元素提升值(月绽放)",
+    "DMG_ELEMENT_RUPTURE_EXTRA_VAL_UP": "元素提升值(绽放)",
+    "DMG_ELEMENT_BURGEON_EXTRA_VAL_UP": "元素提升值(烈绽放)",
+    "DMG_ELEMENT_HYPERBLOOM_EXTRA_VAL_UP": "元素提升值(超绽放)",
+    "DMG_ELEMENT_MOON_ELECTROCHARGED_PROMOTION": "元素擢升(月感电)",
+    "DMG_ELEMENT_MOON_RUPTURE_PROMOTION": "元素擢升(月绽放)",
     "DMG_ENEMY_DEFENSE_BASE": "敌人基础防御",
     "DMG_ENEMY_DEFENSE": "敌人防御",
     "DMG_ENEMY_DEFENSE_DOWN": "敌人防御减少",
@@ -287,12 +298,6 @@
       "OVERLOADED": "超载伤害",
       "BURNING": "燃烧伤害",
       "ELECTROCHARGED": "感电伤害",
-      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "非暴击月感电伤害(直接)",
-      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "暴击月感电伤害(直接)",
-      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "期望月感电伤害(直接)",
-      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "非暴击月感电伤害(反应)",
-      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "暴击月感电伤害(反应)",
-      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "期望月感电伤害(反应)",
       "SUPERCONDUCT": "超导伤害",
       "RUPTURE": "绽放伤害",
       "BURGEON": "烈绽放伤害",
@@ -304,7 +309,16 @@
       "SWIRL_HYDRO": "水扩散伤害",
       "DESTRUCTION": "破冰伤害",
       "SHIELD": "结晶基础盾量",
-      "SHIELD_SPECIAL": "结晶对应元素吸收量"
+      "SHIELD_SPECIAL": "结晶对应元素吸收量",
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "非暴击月感电伤害(直接)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "暴击月感电伤害(直接)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "期望月感电伤害(直接)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "非暴击月感电伤害(反应)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "暴击月感电伤害(反应)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "期望月感电伤害(反应)",
+      "ORIGIN_MOON_RUPTURE_DIRECTLY": "非暴击月绽放伤害(直接)",
+      "CRIT_MOON_RUPTURE_DIRECTLY": "暴击月绽放伤害(直接)",
+      "EXPECT_MOON_RUPTURE_DIRECTLY": "期望月绽放伤害(直接)"
     },
     "OTHER": {
       "HEALING": "治疗值",
@@ -371,10 +385,13 @@
       "DMG_AGGRAVATE_BASE": "超激化基础乘区",
       "DMG_SPREAD_BASE": "蔓激化基础乘区",
       "DMG_HYPER_BLOOM_BASE": "超绽放基础乘区",
+      "DMG_HYPER_BLOOM_EXTRA_VAL": "超绽放额外提升区",
       "DMG_HYPER_BLOOM_RATE": "超绽放増幅乘区",
       "DMG_BURGEON_BASE": "烈绽放基础乘区",
+      "DMG_BURGEON_EXTRA_VAL": "烈绽放额外提升区",
       "DMG_BURGEON_RATE": "烈绽放増幅乘区",
       "DMG_RUPTURE_BASE": "绽放基础乘区",
+      "DMG_RUPTURE_EXTRA_VAL": "绽放额外提升区",
       "DMG_RUPTURE_RATE": "绽放増幅乘区",
       "DMG_SHIELD_SPECIAL_RATE": "对应元素乘区",
       "HEALING_BASE": "治疗基础乘区",
@@ -395,7 +412,12 @@
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[成员3]反应月感电",
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[成员4]反应月感电",
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "期望月感电",
-      "DMG_MOON_ELECTRO_CHARGED_RATE": "月感电増幅乘区"
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "月感电増幅乘区",
+      "DMG_MOON_ELECTROCHARGED_PROMOTION": "月感电擢升区",
+      "DMG_MOON_RUPTURE_DIRECTLY_BASE": "直伤月绽放基础乘区",
+      "DMG_MOON_RUPTURE_DIRECTLY_RATE": "月绽放増幅乘区",
+      "DMG_MOON_RUPTURE_DIRECTLY_EXTRA_VAL": "月绽放额外提升区",
+      "DMG_MOON_RUPTURE_PROMOTION": "月绽放擢升区"
     }
   },
   "ENKA": {
@@ -594,6 +616,9 @@
     },
     "SECRET_LAW": {
       "TITLE": "秘律之数"
+    },
+    "MOON_LEVEL": {
+      "TITLE": "月兆等级"
     }
   },
   "MENU": {
