--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -162,9 +162,10 @@
     "DMG_RATE_MULTI_WEAPON": "武器傷害倍率乘算加成",
     "DMG_RATE_MULTI_OTHER": "其他傷害倍率乘算加成",
     "DMG_RATE_MULTI_SET": "聖遺物傷害倍率乘算加成",
-    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "月感電傷害倍率乘算加成",
     "HEALING_RATE_MULTI_SKILL": "元素技能治療倍率乘算加成",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "元素爆發治療倍率乘算加成",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "月感電傷害倍率乘算加成",
+    "DMG_RATE_MULTI_MOON_RUPTURE": "月绽放伤害倍率乘算加成",
     "DMG_VAL_UP_CRYO": "冰元素傷害增加值",
     "DMG_VAL_UP_ANEMO": "風元素傷害增加值",
     "DMG_VAL_UP_PHYSICAL": "物理傷害增加值",
@@ -201,6 +202,7 @@
     "DMG_CRIT_RATE_UP_WEAPON": "武器傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_OTHER": "其他傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_SET": "聖遺物傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击率增加值",
     "DMG_CRIT_DMG_UP_CRYO": "冰元素傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_ANEMO": "風元素傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_PHYSICAL": "物理傷害暴擊傷害增加值",
@@ -218,7 +220,9 @@
     "DMG_CRIT_DMG_UP_WEAPON": "武器傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_OTHER": "其他傷害暴擊傷害增加值",
     "DMG_CRIT_DMG_UP_SET": "聖遺物傷害暴擊傷害增加值",
+    "DMG_CRIT_DMG_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击伤害增加值",
     "DMG_ELEMENT_UP": "元素增幅(全)",
+    "DMG_ELEMENT_MOON_ALL_UP": "元素増幅(月曜)",
     "DMG_ELEMENT_VAPORIZE_UP": "元素增幅(蒸發)",
     "DMG_ELEMENT_MELT_UP": "元素增幅(融化)",
     "DMG_ELEMENT_OVERLOADED_UP": "元素增幅(超載)",
@@ -231,10 +235,15 @@
     "DMG_ELEMENT_DESTRUCTION_UP": "元素增幅(破冰)",
     "DMG_ELEMENT_SHIELD_UP": "元素增幅(結晶)",
     "DMG_ELEMENT_RUPTURE_UP": "元素增幅(綻放)",
+    "DMG_ELEMENT_MOON_RUPTURE_UP": "元素増幅(月绽放)",
     "DMG_ELEMENT_BURGEON_UP": "元素增幅(烈綻放)",
     "DMG_ELEMENT_HYPERBLOOM_UP": "元素增幅(超綻放)",
     "DMG_ELEMENT_AGGRAVATE_UP": "元素增幅(超激化)",
     "DMG_ELEMENT_SPREAD_UP": "元素增幅(蔓激化)",
+    "DMG_ELEMENT_MOON_RUPTURE_EXTRA_VAL_UP": "元素提升值(月绽放)",
+    "DMG_ELEMENT_RUPTURE_EXTRA_VAL_UP": "元素提升值(绽放)",
+    "DMG_ELEMENT_BURGEON_EXTRA_VAL_UP": "元素提升值(烈绽放)",
+    "DMG_ELEMENT_HYPERBLOOM_EXTRA_VAL_UP": "元素提升值(超绽放)",
     "DMG_ENEMY_DEFENSE_BASE": "敵人基礎防禦",
     "DMG_ENEMY_DEFENSE": "敵人防禦",
     "DMG_ENEMY_DEFENSE_DOWN": "敵人防禦減少",
@@ -287,12 +296,6 @@
       "OVERLOADED": "超載傷害",
       "BURNING": "燃燒傷害",
       "ELECTROCHARGED": "感電傷害",
-      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "非暴擊月感電傷害(直接)",
-      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "暴擊月感電傷害(直接)",
-      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "期望月感電傷害(直接)",
-      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "非暴擊月感電傷害(反應)",
-      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "暴擊月感電傷害(反應)",
-      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "期望月感電傷害(反應)",
       "SUPERCONDUCT": "超導傷害",
       "RUPTURE": "綻放傷害",
       "BURGEON": "烈綻放傷害",
@@ -304,7 +307,16 @@
       "SWIRL_HYDRO": "水擴散傷害",
       "DESTRUCTION": "破冰傷害",
       "SHIELD": "結晶基礎盾量",
-      "SHIELD_SPECIAL": "結晶對應元素吸收量"
+      "SHIELD_SPECIAL": "結晶對應元素吸收量",
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "非暴擊月感電傷害(直接)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "暴擊月感電傷害(直接)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "期望月感電傷害(直接)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "非暴擊月感電傷害(反應)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "暴擊月感電傷害(反應)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "期望月感電傷害(反應)",
+      "ORIGIN_MOON_RUPTURE_DIRECTLY": "非暴击月绽放伤害(直接)",
+      "CRIT_MOON_RUPTURE_DIRECTLY": "暴击月绽放伤害(直接)",
+      "EXPECT_MOON_RUPTURE_DIRECTLY": "期望月绽放伤害(直接)"
     },
     "OTHER": {
       "HEALING": "治療值",
@@ -371,10 +383,13 @@
       "DMG_AGGRAVATE_BASE": "超激化基礎乘區",
       "DMG_SPREAD_BASE": "蔓激化基礎乘區",
       "DMG_HYPER_BLOOM_BASE": "超綻放基礎乘區",
+      "DMG_HYPER_BLOOM_EXTRA_VAL": "超绽放额外提升区",
       "DMG_HYPER_BLOOM_RATE": "超綻放增幅乘區",
       "DMG_BURGEON_BASE": "烈綻放基礎乘區",
+      "DMG_BURGEON_EXTRA_VAL": "烈绽放额外提升区",
       "DMG_BURGEON_RATE": "烈綻放增幅乘區",
       "DMG_RUPTURE_BASE": "綻放基礎乘區",
+      "DMG_RUPTURE_EXTRA_VAL": "绽放额外提升区",
       "DMG_RUPTURE_RATE": "綻放增幅乘區",
       "DMG_SHIELD_SPECIAL_RATE": "對應元素乘區",
       "HEALING_BASE": "治療基礎乘區",
@@ -395,7 +410,12 @@
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[成員3]反應月感電",
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[成員4]反應月感電",
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "期望月感電",
-      "DMG_MOON_ELECTRO_CHARGED_RATE": "月感電增幅乘區"
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "月感電增幅乘區",
+      "DMG_ELEMENT_MOON_ELECTROCHARGED_PROMOTION": "月感电擢升区",
+      "DMG_MOON_RUPTURE_DIRECTLY_BASE": "直伤月绽放基础乘区",
+      "DMG_MOON_RUPTURE_DIRECTLY_RATE": "月绽放増幅乘区",
+      "DMG_MOON_RUPTURE_DIRECTLY_EXTRA_VAL": "月绽放额外提升区",
+      "DMG_ELEMENT_MOON_RUPTURE_PROMOTION": "月绽放擢升区"
     }
   },
   "ENKA": {
@@ -594,6 +614,9 @@
     },
     "SECRET_LAW": {
       "TITLE": "秘律之數"
+    },
+    "MOON_LEVEL": {
+      "TITLE": "月兆等级"
     }
   },
   "MENU": {
