--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -162,9 +162,10 @@
     "DMG_RATE_MULTI_WEAPON": "Weapon DMG Multiplier Bonus",
     "DMG_RATE_MULTI_OTHER": "Other DMG Multiplier Bonus",
     "DMG_RATE_MULTI_SET": "Artifact DMG Multiplier Bonus",
-    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "Moon Electro-Charged DMG Multiplier Bonus",
     "HEALING_RATE_MULTI_SKILL": "Skill Healing Multiplier Bonus",
     "HEALING_RATE_MULTI_ELEMENTAL_BURST": "Elemental Burst Healing Multiplier Bonus",
+    "DMG_RATE_MULTI_MOON_ELECTROCHARGED": "Moon Electro-Charged DMG Multiplier Bonus",
+    "DMG_RATE_MULTI_MOON_RUPTURE": "月绽放伤害倍率乘算加成",
     "DMG_VAL_UP_CRYO": "Cryo DMG Increase",
     "DMG_VAL_UP_ANEMO": "Anemo DMG Increase",
     "DMG_VAL_UP_PHYSICAL": "Physical DMG Increase",
@@ -201,6 +202,7 @@
     "DMG_CRIT_RATE_UP_WEAPON": "Weapon DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_OTHER": "Other DMG CRIT Rate Increase",
     "DMG_CRIT_RATE_UP_SET": "Artifact DMG CRIT Rate Increase",
+    "DMG_CRIT_RATE_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击率增加值",
     "DMG_CRIT_DMG_UP_CRYO": "Cryo DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_ANEMO": "Anemo DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_PHYSICAL": "Physical DMG CRIT DMG Increase",
@@ -218,7 +220,9 @@
     "DMG_CRIT_DMG_UP_WEAPON": "Weapon DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_OTHER": "Other DMG CRIT DMG Increase",
     "DMG_CRIT_DMG_UP_SET": "Artifact DMG CRIT DMG Increase",
+    "DMG_CRIT_DMG_UP_ELEMENT_MOON_RUPTURE": "月绽放伤害暴击伤害增加值",
     "DMG_ELEMENT_UP": "Element Amplification (All)",
+    "DMG_ELEMENT_MOON_ALL_UP": "元素増幅(月曜)",
     "DMG_ELEMENT_VAPORIZE_UP": "Element Amplification (Vaporize)",
     "DMG_ELEMENT_MELT_UP": "Element Amplification (Melt)",
     "DMG_ELEMENT_OVERLOADED_UP": "Element Amplification (Overloaded)",
@@ -231,10 +235,15 @@
     "DMG_ELEMENT_DESTRUCTION_UP": "Element Amplification (Destruction)",
     "DMG_ELEMENT_SHIELD_UP": "Element Amplification (Elemental Shield)",
     "DMG_ELEMENT_RUPTURE_UP": "Element Amplification (Rupture)",
+    "DMG_ELEMENT_MOON_RUPTURE_UP": "元素増幅(月绽放)",
     "DMG_ELEMENT_BURGEON_UP": "Element Amplification (Burgeon)",
     "DMG_ELEMENT_HYPERBLOOM_UP": "Element Amplification (Hyperbloom)",
     "DMG_ELEMENT_AGGRAVATE_UP": "Element Amplification (Aggravate)",
     "DMG_ELEMENT_SPREAD_UP": "Element Amplification (Spread)",
+    "DMG_ELEMENT_MOON_RUPTURE_EXTRA_VAL_UP": "元素提升值(月绽放)",
+    "DMG_ELEMENT_RUPTURE_EXTRA_VAL_UP": "元素提升值(绽放)",
+    "DMG_ELEMENT_BURGEON_EXTRA_VAL_UP": "元素提升值(烈绽放)",
+    "DMG_ELEMENT_HYPERBLOOM_EXTRA_VAL_UP": "元素提升值(超绽放)",
     "DMG_ENEMY_DEFENSE_BASE": "Enemy Basic Defense",
     "DMG_ENEMY_DEFENSE": "Enemy Defense",
     "DMG_ENEMY_DEFENSE_DOWN": "Enemy Defense Decrease",
@@ -287,12 +296,6 @@
       "OVERLOADED": "Overloaded Damage",
       "BURNING": "Burning Damage",
       "ELECTROCHARGED": "Electrocharged Damage",
-      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "Non-CRIT Moon Electro-Charged DMG (Direct)",
-      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "CRIT Moon Electro-Charged DMG (Direct)",
-      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "Expected Moon Electro-Charged DMG (Direct)",
-      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "Non-CRIT Moon Electro-Charged DMG (Reactional)",
-      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "CRIT Moon Electro-Charged DMG (Reactional)",
-      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "Expected Moon Electro-Charged DMG (Reactional)",
       "SUPERCONDUCT": "Superconduct Damage",
       "RUPTURE": "Rupture Damage",
       "BURGEON": "Burgeon Damage",
@@ -304,7 +307,16 @@
       "SWIRL_HYDRO": "Hydro Swirl Damage",
       "DESTRUCTION": "Destruction Damage",
       "SHIELD": "Basic Shield Amount",
-      "SHIELD_SPECIAL": "Corr Element Absorption"
+      "SHIELD_SPECIAL": "Corr Element Absorption",
+      "ORIGIN_MOON_ELECTROCHARGED_DIRECTLY": "Non-CRIT Moon Electro-Charged DMG (Direct)",
+      "CRIT_MOON_ELECTROCHARGED_DIRECTLY": "CRIT Moon Electro-Charged DMG (Direct)",
+      "EXPECT_MOON_ELECTROCHARGED_DIRECTLY": "Expected Moon Electro-Charged DMG (Direct)",
+      "ORIGIN_MOON_ELECTROCHARGED_REACTIONAL": "Non-CRIT Moon Electro-Charged DMG (Reactional)",
+      "CRIT_MOON_ELECTROCHARGED_REACTIONAL": "CRIT Moon Electro-Charged DMG (Reactional)",
+      "EXPECT_MOON_ELECTROCHARGED_REACTIONAL": "Expected Moon Electro-Charged DMG (Reactional)",
+      "ORIGIN_MOON_RUPTURE_DIRECTLY": "非暴击月绽放伤害(直接)",
+      "CRIT_MOON_RUPTURE_DIRECTLY": "暴击月绽放伤害(直接)",
+      "EXPECT_MOON_RUPTURE_DIRECTLY": "期望月绽放伤害(直接)"
     },
     "OTHER": {
       "HEALING": "Healing",
@@ -371,10 +383,13 @@
       "DMG_AGGRAVATE_BASE": "Aggravate Base Section",
       "DMG_SPREAD_BASE": "Spread Base Section",
       "DMG_HYPER_BLOOM_BASE": "Hyper Bloom Base Section",
+      "DMG_HYPER_BLOOM_EXTRA_VAL": "超绽放额外提升区",
       "DMG_HYPER_BLOOM_RATE": "Hyper Bloom Up Section",
       "DMG_BURGEON_BASE": "Burgeon Base Section",
+      "DMG_BURGEON_EXTRA_VAL": "烈绽放额外提升区",
       "DMG_BURGEON_RATE": "Burgeon Up Section",
       "DMG_RUPTURE_BASE": "Rupture Base Section",
+      "DMG_RUPTURE_EXTRA_VAL": "绽放额外提升区",
       "DMG_RUPTURE_RATE": "Rupture Up Section",
       "DMG_SHIELD_SPECIAL_RATE": "Corresponding Element Section",
       "HEALING_BASE": "Healing Base Section",
@@ -395,7 +410,12 @@
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_3": "[Member 3] Reactional Moon Electro-Charged",
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_CRIT_4": "[Member 4] Reactional Moon Electro-Charged",
       "DMG_MOON_ELECTRO_CHARGED_REACTIONAL_EXPECT": "Expected Moon Electro-Charged",
-      "DMG_MOON_ELECTRO_CHARGED_RATE": "Moon Electro-Charged Amplification Multiplier"
+      "DMG_MOON_ELECTRO_CHARGED_RATE": "Moon Electro-Charged Amplification Multiplier",
+      "DMG_ELEMENT_MOON_ELECTROCHARGED_PROMOTION": "月感电擢升区",
+      "DMG_MOON_RUPTURE_DIRECTLY_BASE": "直伤月绽放基础乘区",
+      "DMG_MOON_RUPTURE_DIRECTLY_RATE": "月绽放増幅乘区",
+      "DMG_MOON_RUPTURE_DIRECTLY_EXTRA_VAL": "月绽放额外提升区",
+      "DMG_ELEMENT_MOON_RUPTURE_PROMOTION": "月绽放擢升区"
     }
   },
   "ENKA": {
@@ -594,6 +614,9 @@
     },
     "SECRET_LAW": {
       "TITLE": "Secret Law"
+    },
+    "MOON_LEVEL": {
+      "TITLE": "月兆等级"
     }
   },
   "MENU": {
